# mkDesktop

./: CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  hallo.desktop  mkDesktop.yml  test.desktop  testBla.desktop
src/: converter.rs  detector.rs  info.rs  main.rs
