[package]
name = "mk_desktop"
version = "1.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI tool to create .desktop files with ease"
homepage = "https://github.com/LucasJaiser/mkDesktop"
repository = "https://github.com/LucasJaiser/mkDesktop"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["cli", "utility", "generator", "terminal", "tool"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
confy = {version = "0.4"}
serde = { version = "1.0", features = ["derive"] }
requestty = "0.4.1"
fuzzy-matcher = "0.3.7"
spinach = "2"
